--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -10,6 +10,14 @@
         align-items: center;
         justify-content: space-between;
         height: 100%;
+        .mobile-logo{
+            img{
+                @media only screen and (max-width: 768px) {
+                    width: 250px !important;
+                    height: 32px;
+                }
+            }
+        }
         #menu-right{
             display: flex;
             height: 100%;
@@ -45,6 +53,7 @@
                     align-items: center;
                     color: #fff;
                     a{
+                        font-family: 'Basier Bold';
                         color: #fff;
                         text-decoration: none;
                         transition: all 0.4s ease-in-out;
@@ -52,8 +61,6 @@
                         padding-bottom: 40px;
                         font-size: 17px;
                         &:hover{
-                            background-color: rgba(0, 0, 0, .03);
-                            opacity: .7;
                             text-decoration: underline;
                             text-decoration-thickness: 2px;
                             &:after{
@@ -61,6 +68,16 @@
                             }
                         }
                     }
+                }
+                // media query for mobile
+                @media only screen and (max-width: 768px) {
+                    @include setMaxWidthsWithMarginsLimitedWidth();
+                    display: none;
+                    width: 100%;
+                    position: absolute;
+                    left: 0;
+                    top: var(--main-nav-height);
+                    background-color: var(--color-primary-dark);
                 }
             }
             #search-menu {
@@ -97,8 +114,10 @@
                 }
             }
             #pull-menu{
-                display: none;
                 margin-left: 30px;
+                @media only screen and (min-width: 768px) {
+                    display: none;  
+                }
             }
         }
     }
