--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,4 @@
 @import "full-review/content-sections";
 @import "reviewThumb/reviewThumb";
 @import "card-listItem/sidebar-card";
+@import "iframe-page/main";
