--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,10 @@ body.dark {
   --slow-speed: 0.6s;
   --min-height-background-image: 300px;
   --main-nav-height: 104px;
+  --main-nav-height-offset: 104px;
   --border-radius: 10px;
+  --border-radius-large: 30px;
+  --hero-banner-height: 369px;
 }
 @media only screen and (min-width: 990px) {
   :root {
@@ -191,6 +194,15 @@ body.dark {
 @media only screen and (min-width: 480px) {
   :root {
     --space-left-right-padding: clamp(calc(16 / var(--scale-base) * 1rem), calc((130 / (var(--scale-full-width) - var(--scale-base))) * 100 * 1vw + 0.1rem), calc(130 / var(--scale-base) * 1rem));
+  }
+}
+
+.logged-in {
+  --main-nav-height-offset: 150px;
+}
+@media only screen and (min-width: 767px) {
+  .logged-in {
+    --main-nav-height-offset: 136px;
   }
 }
 
@@ -561,6 +573,19 @@ footer #footer-bottom {
 .banner-background.slim .banner-content {
   width: 100%;
   max-width: 767px;
+}
+
+.button-2 {
+  background-color: var(--color-accent-primary);
+  border-radius: 10px;
+  padding: 1rem 2.5rem;
+  color: var(--color-text) !important;
+  font-family: "Basier Bold";
+  font-size: 1.2rem;
+  display: block;
+  transition: 0.3s;
+  text-align: center;
+  text-decoration: none;
 }
 
 .button-3 {
@@ -1365,4 +1390,235 @@ section.faqs .faq-container .question {
   .full-page-iframe {
     height: 5200px;
   }
+}
+
+.home-casino-container {
+  background-color: var(--color-primary);
+}
+
+.banner-container {
+  width: 100%;
+  max-width: 1650px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: var(--space-44);
+  padding-bottom: var(--space-22);
+}
+@media only screen and (min-width: 620px) {
+  .banner-container {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .banner-container {
+    padding-left: 6.875rem;
+    padding-right: 6.875rem;
+  }
+}
+@media (max-width: 990px) {
+  .banner-container {
+    padding-top: var(--space-145);
+  }
+}
+.banner-container .banner-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.banner-container .banner-wrapper nav {
+  flex: 0 0 23%;
+}
+.banner-container .banner-wrapper nav h4 {
+  color: var(--color-dark-text);
+  margin-bottom: var(--space-36);
+}
+.banner-container .banner-wrapper nav li {
+  margin-bottom: var(--space-28);
+}
+.banner-container .banner-wrapper nav li a {
+  display: flex;
+  align-items: center;
+  font-family: "Basier Bold";
+  font-size: var(--fs-26);
+  color: var(--color-dark-text-secondary);
+  line-height: 1;
+}
+.banner-container .banner-wrapper nav li a img {
+  margin-right: var(--space-22);
+}
+@media (max-width: 990px) {
+  .banner-container .banner-wrapper nav {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: var(--main-nav-height-offset);
+    flex: 0 0 100%;
+    z-index: 100;
+    background-color: var(--color-background-grey);
+  }
+  .banner-container .banner-wrapper nav h4 {
+    display: none;
+  }
+  .banner-container .banner-wrapper nav ul {
+    width: 100%;
+    max-width: 1650px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    overflow: auto;
+    white-space: nowrap;
+  }
+}
+@media only screen and (max-width: 990px) and (min-width: 620px) {
+  .banner-container .banner-wrapper nav ul {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+@media only screen and (max-width: 990px) and (min-width: 1280px) {
+  .banner-container .banner-wrapper nav ul {
+    padding-left: 6.875rem;
+    padding-right: 6.875rem;
+  }
+}
+@media (max-width: 990px) {
+  .banner-container .banner-wrapper nav ul::-webkit-scrollbar {
+    display: none;
+  }
+}
+@media (max-width: 990px) {
+  .banner-container .banner-wrapper nav ul li {
+    display: inline-block;
+    margin-bottom: 0;
+    padding-top: var(--space-16);
+    padding-bottom: var(--space-16);
+    margin-right: var(--space-28);
+  }
+  .banner-container .banner-wrapper nav ul li a {
+    color: var(--color-text);
+    font-size: var(--fs-18);
+  }
+  .banner-container .banner-wrapper nav ul li a img {
+    filter: invert(1);
+    width: 22px !important;
+    height: 22px !important;
+  }
+}
+.banner-container .banner-wrapper .hero-slider {
+  flex: 0 0 75%;
+}
+.banner-container .banner-wrapper .hero-slider .slideshow-container {
+  position: relative;
+}
+@media (max-width: 990px) {
+  .banner-container .banner-wrapper .hero-slider {
+    flex: 0 0 100%;
+  }
+}
+
+.slides {
+  border-radius: var(--border-radius-large);
+  height: var(--hero-banner-height);
+  background-image: var(--image-url);
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation-name: fade;
+  animation-duration: 1s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slides .slide-text {
+  text-align: center;
+}
+.slides .slide-title {
+  font-family: "Basier Bold", Helvetica, Arial, Lucida, sans-serif;
+  font-size: var(--fs-48);
+  padding-bottom: var(--space-14);
+  line-height: 1em;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+}
+.slides .slide-description {
+  font-size: var(--fs-20);
+  line-height: 1.8em;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  margin-bottom: var(--space-48);
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.slideInUp {
+  animation-fill-mode: forwards;
+  opacity: 0;
+  animation-delay: 0.5s;
+  animation-name: slideInUp;
+  animation-duration: 1s;
+}
+
+@keyframes slideInUp {
+  from {
+    transform: translateY(20%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+.slideshow-container:hover .arrow-prev {
+  opacity: 1;
+  left: 22px;
+}
+
+.slideshow-container:hover .arrow-next {
+  opacity: 1;
+  right: 22px;
+}
+
+.arrow-prev {
+  left: -22px;
+}
+
+.arrow-next {
+  right: -22px;
+}
+
+.arrow-prev:before {
+  content: "4";
+  font-family: ETmodules !important;
+  font-weight: 400;
+  text-shadow: 0 0;
+  direction: ltr;
+}
+
+.arrow-next:before {
+  content: "5";
+  font-family: ETmodules !important;
+  font-weight: 400;
+  text-shadow: 0 0;
+  direction: ltr;
+}
+
+.arrow-prev,
+.arrow-next {
+  position: absolute;
+  top: 50%;
+  z-index: 100;
+  font-size: 48px;
+  color: #fff;
+  margin-top: -24px;
+  transition: all 0.2s ease-in-out;
+  opacity: 0;
 }
