--- a/css/main.css
+++ b/css/main.css
@@ -615,6 +615,20 @@ a.button-4 {
   text-decoration: none;
 }
 
+.button-5 a {
+  background-color: var(--color-accent-primary);
+  border-radius: 10px;
+  padding: 1rem 2.5rem;
+  color: var(--color-text) !important;
+  font-family: "Basier Bold";
+  font-size: 1.2rem;
+  display: block;
+  transition: 0.3s;
+  text-align: center;
+  text-decoration: none !important;
+  display: inline-block;
+}
+
 .home-content-container {
   background-color: var(--color-text);
 }
