--- a/scss/affiliate-list/_main.scss
+++ b/scss/affiliate-list/_main.scss
@@ -1,3 +1,19 @@
+.center-button{
+    text-align: center;
+    margin: 2rem 0;
+}
+.button-1{
+    background-color: var(--color-accent-primary);
+    border-radius: 100px;
+    padding: 1rem 2.5rem;
+    color: var(--color-text) !important;
+    font-family: 'Basier Bold';
+    font-size: 1.2rem;
+    display: inline-block;
+    transition: .3s;
+    text-align: center;
+    text-decoration: none;
+}
 .button-2{
     background-color: var(--color-accent-primary);
     border-radius: 10px;
