--- a/scss/home-page/casino-display/_main.scss
+++ b/scss/home-page/casino-display/_main.scss
@@ -61,6 +61,7 @@
         }
         .casino-list{
             flex: 0 0 75%;
+            width: 75%;
             @media (max-width: $media-medium) {
                 flex: 0 0 100%;
             }
@@ -98,6 +99,92 @@
                     &:hover{
                         color: var(--color-dark-text-secondary);
                     }
+                }
+            }
+            .casino-list-cards{
+                position: relative;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                margin-top: var(--space-66);
+                .card-full{
+                    flex: 0 0 calc(50% - var(--space-20));
+                    width: calc(50% - var(--space-20));
+                    margin-bottom: var(--space-40);
+                }
+            }
+        }
+    }
+}
+.card-full{
+    color: var(--color-text);
+    .card-container{
+        background-color: var(--color-background-grey);
+        border-radius: var(--border-radius);
+        padding: var(--space-25);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        .card-header{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            >a{
+                >img{
+                    max-width: 100px;
+                    height: 100px;
+                    border-radius: var(--border-radius);
+                }
+            }
+            .card-header-details{
+                margin-left: var(--space-25);
+                a{
+                    h3{
+                        font-size: var(--fs-32);
+                        color: var(--color-text);
+                        font-family: 'Basier Bold';
+                    }
+                }
+            }
+        }
+        .card-tags{
+            margin-top: var(--space-22);
+            min-height: 48px;
+        }
+        .card-features{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-top: var(--space-14);
+            margin-bottom: var(--space-10);
+            .feature-review{
+                flex: 0 0 calc(50% - var(--space-8));
+                display: flex;
+                align-items: center;
+                font-size: var(--fs-12);
+                margin-bottom: var(--space-4);
+                img{
+                    margin-right: var(--space-8);
+                }
+            }
+        }
+        .card-offer-info{
+            display: flex;
+            flex-wrap: wrap;
+            margin-top: var(--space-18);
+            margin-bottom: var(--space-32);
+            .card-offer{
+                flex: 0 0 25%;
+                .offer-title{
+                    display: block;
+                    text-transform: uppercase;
+                    color: var(--color-text-secondary);
+                    font-size: var(--fs-12);
+                }
+                .offer-description{
+                    font-size: var(--fs-26);
+                    font-family: 'Basier Bold';
                 }
             }
         }
