--- a/css/main.css
+++ b/css/main.css
@@ -1230,8 +1230,8 @@ section.faqs .faq-container .question {
 .full-review-content .frc-container .frc-c-main .details {
   background-color: var(--color-background-grey);
   border-radius: var(--border-radius);
-  padding: var(--space-36);
   color: var(--color-text);
+  padding: var(--space-36);
 }
 .full-review-content .frc-container .frc-c-main .details .bonus-element {
   margin-bottom: var(--space-28);
@@ -1782,7 +1782,7 @@ section.faqs .faq-container .question {
   color: var(--color-dark-text-secondary);
   line-height: 1.5;
   font-size: var(--fs-26);
-  height: 4.5rem;
+  height: 4rem;
   max-width: 100%;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -1829,8 +1829,6 @@ section.faqs .faq-container .question {
   padding: var(--space-25);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
 }
 .card-full .card-container .card-header {
   display: flex;
@@ -1889,4 +1887,63 @@ section.faqs .faq-container .question {
 .card-full .card-container .card-offer-info .card-offer .offer-description {
   font-size: var(--fs-26);
   font-family: "Basier Bold";
+}
+.card-full .card-container .card-additional-details .center-content a {
+  color: var(--color-text);
+}
+.card-full .card-container .card-additional-details .center-content a:hover {
+  color: var(--color-text-secondary);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content {
+  display: none;
+}
+.card-full .card-container .card-additional-details .card-additional-details-content.expanded {
+  display: block;
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .additional-details-list {
+  padding-top: var(--space-36);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .additional-details-list .details {
+  background-color: var(--color-background-grey);
+  border-radius: var(--border-radius);
+  color: var(--color-text);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .additional-details-list .details .bonus-element {
+  margin-bottom: var(--space-28);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .additional-details-list .details .bonus-element:last-of-type {
+  margin-bottom: 0;
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .additional-details-list .details .bonus-element .step-title {
+  font-size: var(--fs-26);
+  font-family: "Basier Bold";
+  margin-bottom: var(--space-14);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .additional-details-list .details .bonus-element .step-detail {
+  display: inline-block;
+  border: 1px solid var(--color-text);
+  color: var(--color-text-secondary);
+  border-radius: 4px;
+  padding: 0.3rem 0.5rem 0.2rem 0.5rem;
+  margin: 0.25rem 0.25rem 0.25rem 0;
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .card-description {
+  padding-top: var(--space-36);
+  padding-bottom: var(--space-20);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .est-year label {
+  display: block;
+  text-transform: uppercase;
+  color: var(--color-text-secondary);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .est-year span {
+  font-size: var(--fs-26);
+  font-family: "Basier Bold";
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .card-link {
+  padding-top: var(--space-20);
+}
+.card-full .card-container .card-additional-details .card-additional-details-content .card-link a {
+  color: var(--color-text);
+  text-decoration: underline;
 }
