--- a/scss/full-review/_content-sections.scss
+++ b/scss/full-review/_content-sections.scss
@@ -1,3 +1,27 @@
+@mixin details(){
+    background-color: var(--color-background-grey);
+    border-radius: var(--border-radius);
+    color: var(--color-text);
+    .bonus-element{
+        margin-bottom: var(--space-28);
+        &:last-of-type{
+            margin-bottom: 0;
+        }
+        .step-title{
+            font-size: var(--fs-26);
+            font-family: 'Basier Bold';
+            margin-bottom: var(--space-14);
+        }
+        .step-detail{
+            display: inline-block;
+            border: 1px solid var(--color-text);
+            color: var(--color-text-secondary);
+            border-radius: 4px;
+            padding: 0.3rem 0.5rem 0.2rem 0.5rem;
+            margin: 0.25rem 0.25rem 0.25rem 0;
+        }
+    }
+}
 .full-review-content{
     background-color: var(--color-primary);
     padding: var(--space-66) 0;
@@ -10,29 +34,8 @@
         .frc-c-main{
             flex: 0 0 100%;
             .details{
-                background-color: var(--color-background-grey);
-                border-radius: var(--border-radius);
+                @include details();
                 padding: var(--space-36);
-                color: var(--color-text);
-                .bonus-element{
-                    margin-bottom: var(--space-28);
-                    &:last-of-type{
-                        margin-bottom: 0;
-                    }
-                    .step-title{
-                        font-size: var(--fs-26);
-                        font-family: 'Basier Bold';
-                        margin-bottom: var(--space-14);
-                    }
-                    .step-detail{
-                        display: inline-block;
-                        border: 1px solid var(--color-text);
-                        color: var(--color-text-secondary);
-                        border-radius: 4px;
-                        padding: 0.3rem 0.5rem 0.2rem 0.5rem;
-                        margin: 0.25rem 0.25rem 0.25rem 0;
-                    }
-                }
             }
             .content-container{
                 padding-top: var(--space-48);
