--- a/scss/common/_common.scss
+++ b/scss/common/_common.scss
@@ -88,6 +88,9 @@
     @include setMaxWidthsWithMarginsLimitedWidth();
     background-color: var(--color-primary);
     padding-bottom: var(--space-110);
+    &.dark{
+        background-color: var(--color-text-secondary);
+    }
     h1,h2,h3,h4,h5,h6{
         font-family: 'Basier Bold';
     }
@@ -102,6 +105,9 @@
             margin-top: var(--space-54);
         }
     }
+}
+.page-wrapper-home{
+    padding-top: var(--space-110);
 }
 .elk-tournament-container{
     position: relative;
