--- a/css/main.css
+++ b/css/main.css
@@ -250,6 +250,9 @@ h2 {
     padding-right: 6.875rem;
   }
 }
+.page-wrapper.dark {
+  background-color: var(--color-text-secondary);
+}
 .page-wrapper h1, .page-wrapper h2, .page-wrapper h3, .page-wrapper h4, .page-wrapper h5, .page-wrapper h6 {
   font-family: "Basier Bold";
 }
@@ -261,6 +264,10 @@ h2 {
 .page-wrapper section.featured-image img {
   max-width: 100%;
   margin-top: var(--space-54);
+}
+
+.page-wrapper-home {
+  padding-top: var(--space-110);
 }
 
 .elk-tournament-container {
